--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,5 @@
 .grid-container{
   background-image: url("..//img/cocina.jpg");
-  height: 150vh;
   background-repeat: no-repeat;
   background-position: fixed;
 }
@@ -8,4 +7,19 @@
 .principal{
   background-color: rgba(255, 102, 0, 0.5);
   height: 100%;
+}
+
+.miniaturas{
+  margin: 10px 30px;
+}
+
+.left-column{
+  background-color: #FFFFFF;
+}
+
+.callout{
+}
+
+.logo{
+  margin-top: 50px;
 }
